force-app/main/default/objects/Offer__c/fields/Benefits__c.field-meta.xml
<CustomField>
    <fullName>Benefits__c</fullName>
    <label>Benefits</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>