force-app/main/default/objects/Offer__c/fields/Pay_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Pay_Frequency__c</fullName>
    <label>Pay Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Annual</fullName><default>true</default><label>Annual</label></value>
            <value><fullName>Monthly</fullName><default>false</default><label>Monthly</label></value>
            <value><fullName>Hourly</fullName><default>false</default><label>Hourly</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>