force-app/main/default/objects/Offer__c/fields/Signing_Bonus__c.field-meta.xml
<CustomField>
    <fullName>Signing_Bonus__c</fullName>
    <label>Signing Bonus</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>