force-app/main/default/objects/Offer__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Draft</fullName><default>true</default><label>Draft</label></value>
            <value><fullName>Pending Approval</fullName><default>false</default><label>Pending Approval</label></value>
            <value><fullName>Approved</fullName><default>false</default><label>Approved</label></value>
            <value><fullName>Extended</fullName><default>false</default><label>Extended</label></value>
            <value><fullName>Accepted</fullName><default>false</default><label>Accepted</label></value>
            <value><fullName>Declined</fullName><default>false</default><label>Declined</label></value>
            <value><fullName>Expired</fullName><default>false</default><label>Expired</label></value>
            <value><fullName>Withdrawn</fullName><default>false</default><label>Withdrawn</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>